@@ -1,3 +1,14 @@
+2004-02-06  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  (digest)  Add missing substitutions.
+	Thanks to SRE.
+
+	* lib/Mj/Format.pm:  (createlist, set, show)  Sanitize
+	lists more carefully.  Thanks to SRE.
+
+	* lib/Mj/Inform.pm:  (_inform_owner)  Remove example.com
+	from two substitutions.  Thanks to SRE.
+
 2004-02-04  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm:  (connect)  Initialize variables
